--- a/project-euler.org
+++ b/project-euler.org
@@ -1187,10 +1187,20 @@
   How many Sundays fell on the first of the month during the twentieth century
   (1 Jan 1901 to 31 Dec 2000)?
 
-How many Sundays fell on the first of the month during the twentieth
-century (1 Jan 1901 to 31 Dec 2000)?
+** Solution
 
 * COMMENT [[https://projecteuler.net/problem%3D20][Problem 20: Factorial digit sum]]
+
+   #+BEGIN_SRC clojure
+   (->> (periodic-seq (date-time 1901 1 1)
+                      (date-time 2000 12 31)
+                      (months 1))
+        (filter sunday?)
+        (count))
+   #+END_SRC
+
+   #+RESULTS:
+   : 171
 
 
 /n/! means /n/ × (/n/ − 1) × ... × 3 × 2 × 1
