Updated text for problem 19

--- a/project-euler.org
+++ b/project-euler.org
@@ -1194,6 +1194,8 @@
 ** Solution
 
 * COMMENT [[https://projecteuler.net/problem%3D20][Problem 20: Factorial digit sum]]
+   Instead of thinking even the slightest about this problem, we can use the
+   [[https://github.com/clj-time/clj-time][clj-time]] library.
 
    #+BEGIN_SRC clojure
    (->> (periodic-seq (date-time 1901 1 1)
