--- a/project-euler.org
+++ b/project-euler.org
@@ -1208,14 +1208,19 @@
    #+RESULTS:
    : 171
 
+* [[https://projecteuler.net/problem%3D20][Problem 20: Factorial digit sum]]
 
-/n/! means /n/ × (/n/ − 1) × ... × 3 × 2 × 1
+  n! means n × (n − 1) × ... × 3 × 2 × 1
 
-For example, 10! = 10 × 9 × ... × 3 × 2 × 1 = 3628800,\\
-and the sum of the digits in the number 10! is 3 + 6 + 2 + 8 + 8 + 0 + 0
-= 27.
+  For example, 10! = 10 × 9 × ... × 3 × 2 × 1 = 3628800,\\
+  and the sum of the digits in the number 10! is 3 + 6 + 2 + 8 + 8 + 0 + 0
+  = 27.
 
-Find the sum of the digits in the number 100!
+  Find the sum of the digits in the number 100!
+
+
+
+
 
 * COMMENT [[https://projecteuler.net/problem%3D21][Problem 21: Amicable numbers]]
 
