--- a/project-euler.org
+++ b/project-euler.org
@@ -1285,20 +1285,20 @@
    #+RESULTS:
    : 31626
 
-* COMMENT [[https://projecteuler.net/problem%3D22][Problem 22: Names scores]]
+* [[https://projecteuler.net/problem%3D22][Problem 22: Names scores]]
 
 
-Using [[project/resources/p022_names.txt][names.txt]] (right click and
-'Save Link/Target As...'), a 46K text file containing over five-thousand
-first names, begin by sorting it into alphabetical order. Then working
-out the alphabetical value for each name, multiply this value by its
-alphabetical position in the list to obtain a name score.
+  Using [[https://projecteuler.net/project/resources/p022_names.txt][names.txt]] (right click and 'Save Link/Target As...'), a 46K text file
+  containing over five-thousand first names, begin by sorting it into
+  alphabetical order. Then working out the alphabetical value for each name,
+  multiply this value by its alphabetical position in the list to obtain a name
+  score.
 
-For example, when the list is sorted into alphabetical order, COLIN,
-which is worth 3 + 15 + 12 + 9 + 14 = 53, is the 938th name in the list.
-So, COLIN would obtain a score of 938 × 53 = 49714.
+  For example, when the list is sorted into alphabetical order, COLIN, which is
+  worth 3 + 15 + 12 + 9 + 14 = 53, is the 938th name in the list.  So, COLIN
+  would obtain a score of 938 × 53 = 49714.
 
-What is the total of all the name scores in the file?
+  What is the total of all the name scores in the file?
 
 * COMMENT [[https://projecteuler.net/problem%3D23][Problem 23: Non-abundant sums]]
 
