--- a/project-euler.org
+++ b/project-euler.org
@@ -1526,7 +1526,6 @@
 
   What is the first term in the Fibonacci sequence to contain 1000 digits?
 
-* COMMENT [[https://projecteuler.net/problem%3D26][Problem 26: Reciprocal cycles]]
 ** Solution
 
    This is very similar to problem 2. We need to keep track of what term it is,
@@ -1546,29 +1545,53 @@
    #+RESULTS:
    : 4785
 
+* [[https://projecteuler.net/problem%3D26][Problem 26: Reciprocal cycles]]
+
 
   A unit fraction contains 1 in the numerator. The decimal representation
   of the unit fractions with denominators 2 to 10 are given:
 
   #+BEGIN_QUOTE
-  | ^{1}/_{2}    | =    | 0.5          |
-  | ^{1}/_{3}    | =    | 0.(3)        |
-  | ^{1}/_{4}    | =    | 0.25         |
-  | ^{1}/_{5}    | =    | 0.2          |
-  | ^{1}/_{6}    | =    | 0.1(6)       |
-  | ^{1}/_{7}    | =    | 0.(142857)   |
-  | ^{1}/_{8}    | =    | 0.125        |
-  | ^{1}/_{9}    | =    | 0.(1)        |
-  | ^{1}/_{10}   | =    | 0.1          |
+  1/2 = 0.5 \\
+  1/3 = 0.(3) \\
+  1/4 = 0.25 \\
+  1/5 = 0.2 \\
+  1/6 = 0.1(6) \\
+  1/7 = 0.(142857) \\
+  1/8 = 0.125 \\
+  1/9 = 0.(1) \\
+  1/10  = 0.1 \\
   #+END_QUOTE
 
-  Where 0.1(6) means 0.166666..., and has a 1-digit recurring cycle. It
-  can be seen that ^{1}/_{7} has a 6-digit recurring cycle.
+  Where 0.1(6) means 0.166666..., and has a 1-digit recurring cycle. It can be
+  seen that 1/7 has a 6-digit recurring cycle.
 
-  Find the value of /d/ < 1000 for which ^{1}/_{/d/} contains the longest
-  recurring cycle in its decimal fraction part.
+  Find the value of $d$ < 1000 for which 1/$d$ contains the longest recurring
+  cycle in its decimal fraction part.
 
-* COMMENT [[https://projecteuler.net/problem%3D27][Problem 27: Quadratic primes]]
+** Solution
+
+   This is a function that counts the number of repeating decimals.
+
+   #+BEGIN_SRC clojure :exports source
+   (defn repeating-decimals [n]
+     (loop [k 1]
+       (if (or (-> (exp 10N k) dec (mod n) zero?) (= k n))
+         k
+         (recur (inc k)))))
+   #+END_SRC
+
+   Primes produce the longest repeating cycles, so we can narrow the search
+   down to only look at primes.
+
+   #+BEGIN_SRC clojure
+   (->> (reduce sieve [2] (range 3 1001))
+        (map (fn [n] [n (repeating-decimals n)]))
+        (apply max-key second) first)
+   #+END_SRC
+
+   #+RESULTS:
+   : 983
 
 
   Euler discovered the remarkable quadratic formula:
