--- a/project-euler.org
+++ b/project-euler.org
@@ -1593,41 +1593,34 @@
    #+RESULTS:
    : 983
 
+* [[https://projecteuler.net/problem%3D27][Problem 27: Quadratic primes]]
+
 
   Euler discovered the remarkable quadratic formula:
 
-  /n/² + /n/ + 41
+  \[n^2 + n + 41\]
 
   It turns out that the formula will produce 40 primes for the consecutive
-  values /n/ = 0 to 39. However, when /n/ = 40, 40^{2} + 40 + 41 = 40(40 +
-  1) + 41 is divisible by 41, and certainly when /n/ = 41, 41² + 41 + 41
-  is clearly divisible by 41.
+  values n = 0 to 39. However, when n = 40, 40^{2} + 40 + 41 = 40(40 + 1) + 41
+  is divisible by 41, and certainly when n = 41, 41^2 + 41 + 41 is clearly
+  divisible by 41.
 
-  The incredible formula  /n/² − 79/n/ + 1601 was discovered, which
-  produces 80 primes for the consecutive values /n/ = 0 to 79. The product
-  of the coefficients, −79 and 1601, is −126479.
+  The incredible formula n^2 − 79n + 1601 was discovered, which produces 80
+  primes for the consecutive values n = 0 to 79. The product of the
+  coefficients, −79 and 1601, is −126479.
 
   Considering quadratics of the form:
 
-  #+BEGIN_QUOTE
-  /n/² + /an/ + /b/, where |/a/| < 1000 and |/b/| < 1000\\
-  \\
+  - n^2 + an + b  where |a| < 1000 and |b| < 1000
+  - where |n| is the modulus/absolute value of n \\
+    e.g. |11| = 11 and |−4| = 4.
 
-  #+BEGIN_HTML
-    <div class="info" style="text-align:left;">
-  #+END_HTML
+  Find the product of the coefficients, a and b, for the quadratic expression
+  that produces the maximum number of primes for consecutive values of n,
+  starting with n = 0.
 
-  where |/n/| is the modulus/absolute value of /n/\\
-  e.g. |11| = 11 and |−4| = 4
 
-  #+BEGIN_HTML
-    </div>
-  #+END_HTML
-  #+END_QUOTE
 
-  Find the product of the coefficients, /a/ and /b/, for the quadratic
-  expression that produces the maximum number of primes for consecutive
-  values of /n/, starting with /n/ = 0.
 
 * COMMENT [[https://projecteuler.net/problem%3D28][Problem 28: Number spiral diagonals]]
 
